jetty configuration added to remove the inncorrect command key error