@@ -66,11 +66,54 @@
   <build>
     <finalName>drapp-rest</finalName>
     <plugins>
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>${jetty.version}</version>
-            </plugin>
+                <configuration>  
+				    <jettyXml> conf/jetty.xml, conf/jetty-ssl.xml </jettyXml>  
+				    <contextXml>${project.basedir}/src/main/resources/jetty-context.xml</contextXml>  
+				    <ScanIntervalSeconds> 10 </ScanIntervalSeconds>  
+				     <WebApp>  
+				      <ContextPath>/</ContextPath>  
+				    </WebApp>  
+				  </configuration>
+            </plugin> -->
+            
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.2</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
+			
+			<plugin>
+		        <groupId>org.mortbay.jetty</groupId>
+		        <artifactId>maven-jetty-plugin</artifactId>
+		        <version>6.1.10</version>
+		        <configuration>
+		                <scanIntervalSeconds>10</scanIntervalSeconds>
+		                <stopKey>foo</stopKey>
+		                <stopPort>9999</stopPort>
+		        </configuration>
+		        </plugin>
+            
+            <plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://127.0.0.1:8081/manager/text</url>
+					<server>TomcatServer</server>
+					<path>/drapp-rest</path>
+					<systemProperties>
+			            <JAVA_OPTS>-Xmx4024m -Xms512m -XX:MaxPermSize=512m -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000</JAVA_OPTS>
+			          </systemProperties>
+				</configuration>
+			</plugin>
     </plugins>
   </build>
 </project>
